# minimal-fastapi-postgres-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  cookiecutter.json  docker-compose.yml  init.sh  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: build_docker_image.yml  dev_build.yml  manual_build_docker_image.yml  tests.yml  type_check.yml
alembic/: env.py
alembic/versions/: 2024011939_init_user_and_refresh_token_21f30f70dab2.py  2024030244_add_create_and_update_time_b70e5f695bd2.py  2024030345_init_user_and_refresh_token_c79b0938ea4b.py  20250602_2142_initial_migration_be24780c0da0.py  20260203_1616_initial_auth_683275eeb305.py
app/: conftest.py  main.py  models.py
app/api/: api_messages.py  api_router.py  deps.py
app/api/endpoints/: auth.py  users.py
app/auth/: api_messages.py  dependencies.py  jwt.py  models.py  password.py  responses.py  schemas.py  views.py
app/auth/tests/: test_access_token.py  test_api_router_jwt_errors.py  test_auth_refresh_token.py  test_delete_current_user.py  test_jwt.py  test_password.py  test_read_current_user.py  test_register_new_user.py  test_reset_password.py  test_view_delete_current_user.py  test_view_login_access_token.py  test_view_read_current_user.py  test_view_refresh_token.py  test_view_register_new_user.py  test_view_reset_current_user_password.py
app/core/: config.py  database_session.py  lifespan.py  metrics.py  session.py
app/core/security/: jwt.py  password.py
app/probe/: views.py
app/probe/tests/: test_views.py
app/tests/: auth.py  conftest.py  factories.py  test_api_router_jwt_errors.py  test_auth.py  test_users.py
app/tests/test_auth/: test_access_token.py  test_auth_login_access_token.py  test_auth_refresh_token.py  test_register_new_user.py
app/tests/test_core/: test_jwt.py  test_password.py
app/tests/test_users/: test_delete_current_user.py  test_read_current_user.py  test_reset_password.py
hooks/: post_gen_project.py
tests/: create_fastapi_users_project.py  create_minimal_project.py  create_test_project.py
{{cookiecutter.project_name}}/: .env  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sh  lint.sh  nginx-unit-config.json  pre-push.sh  prestart.sh  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.project_name}}/alembic/: env.py
{{cookiecutter.project_name}}/alembic/versions/: 20211023022523_b6b74331d700_init.py  20211023121450_3c44f0828d4f_init.py  20211023161504_e2318cba28d4_init.py  2021_11_09_1736_init__cefce371682e.py  2022050745_init_user_model_d1252175c146.py  2023020440_init_user_model_07c71f4389b6.py  ccdd01c9a0c6_init.py
{{cookiecutter.project_name}}/app/: conftest.py  initial_data.py  main.py  models.py  session.py
{{cookiecutter.project_name}}/app/api/: api.py  deps.py  routers.py
{{cookiecutter.project_name}}/app/api/api_v1/: api.py  auth.py  deps.py  users.py
{{cookiecutter.project_name}}/app/api/api_v1/endpoints/: login.py  users.py
{{cookiecutter.project_name}}/app/api/endpoints/: auth.py  login.py  users.py
{{cookiecutter.project_name}}/app/core/: config.py  security.py  session.py
{{cookiecutter.project_name}}/app/core/security/: jwt.py  password.py
{{cookiecutter.project_name}}/app/crud/: __init__.py  base.py  crud_user.py
{{cookiecutter.project_name}}/app/db/: base.py  init_db.py
{{cookiecutter.project_name}}/app/models/: user.py
{{cookiecutter.project_name}}/app/schemas/: __init__.py  requests.py  responses.py  token.py
{{cookiecutter.project_name}}/app/tests/: conftest.py  test_auth.py  test_users.py  utils.py
{{cookiecutter.project_name}}/app/tests/api/: test_login.py  test_users.py
{{cookiecutter.project_name}}/app/tests/crud/: test_user.py
{{cookiecutter.project_name}}/app/tests/utils/: user.py  utils.py
{{cookiecutter.project_name}}/template_fastapi_users/: .env.example  .env.template  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.project_name}}/template_fastapi_users/alembic/versions/: 2022_01_09_1952_initial_fastapi_users_model__57b460a916d4.py
{{cookiecutter.project_name}}/template_fastapi_users/app/: conftest.py  initial_data.py  main.py  models.py
{{cookiecutter.project_name}}/template_fastapi_users/app/api/: api.py  deps.py
{{cookiecutter.project_name}}/template_fastapi_users/app/api/endpoints/: auth.py
{{cookiecutter.project_name}}/template_fastapi_users/app/core/: config.py  security.py
{{cookiecutter.project_name}}/template_fastapi_users/app/schemas/: __init__.py  user.py
{{cookiecutter.project_name}}/template_fastapi_users/app/tests/: conftest.py  test_auth.py  utils.py
{{cookiecutter.project_name}}/template_minimal/: .env.example  .env.template  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  nginx-unit-config.json  pre-push.sh  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.project_name}}/template_minimal/alembic/: env.py
{{cookiecutter.project_name}}/template_minimal/alembic/versions/: 20220503_init_user_table_2dba36457121.py  20220504_init_user_model_050a3f0604ae.py  2022050753_init_user_model_940215fe1ae8.py
{{cookiecutter.project_name}}/template_minimal/app/: conftest.py  initial_data.py  main.py  models.py  session.py
{{cookiecutter.project_name}}/template_minimal/app/api/: api.py  deps.py
{{cookiecutter.project_name}}/template_minimal/app/api/endpoints/: auth.py  users.py
{{cookiecutter.project_name}}/template_minimal/app/core/: config.py  security.py  session.py
{{cookiecutter.project_name}}/template_minimal/app/schemas/: __init__.py  token.py  user.py
{{cookiecutter.project_name}}/template_minimal/app/tests/: conftest.py  test_auth.py  utils.py
