[project]
name = "app"
version = "0.1.0-alpha"
description = "FastAPI project generated using minimal-fastapi-postgres-template."
authors = [{ name = "admin", email = "admin@example.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.17.1,<2",
    "asyncpg>=0.30.0,<0.31",
    "bcrypt>=5.0.0,<6",
    "fastapi>=0.120.4,<0.121",
    "pydantic[email]>=2.12.3,<3",
    "pydantic-settings>=2.11.0,<3",
    "pyjwt>=2.10.1,<3",
    "python-multipart>=0.0.20,<0.0.21",
    "sqlalchemy[asyncio]>=2.0.44,<3",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0,<8",
    "freezegun>=1.5.5,<2",
    "greenlet>=3.2.4,<4",
    "httpx>=0.28.1,<0.29",
    "mypy>=1.18.2,<2",
    "pre-commit>=4.3.0,<5",
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-xdist>=3.8.0,<4",
    "ruff>=0.14.3,<0.15",
    "uvicorn[standard]>=0.38.0,<0.39",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=100"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.coverage.run]
concurrency = ["greenlet"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]
