[tool.poetry]
authors = ["admin <admin@example.com>"]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "app"
version = "0.1.0-alpha"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

alembic = "^1.18.3"
asyncpg = "^0.31.0"
bcrypt = "^5.0.0"
fastapi = "^0.128.0"
pydantic = { extras = ["dotenv", "email"], version = "^2.12.5" }
pydantic-settings = "^2.12.0"
pyjwt = "^2.11.0"
python-multipart = "^0.0.22"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.46" }

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.2"
freezegun = "^1.5.5"
greenlet = "^3.3.1"
httpx = "^0.28.1"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
ruff = "^0.14.14"
uvicorn = { extras = ["standard"], version = "^0.40.0" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=100"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.coverage.run]
concurrency = ["greenlet"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]
