[tool.poetry]
authors = ["admin <admin@example.com>"]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "{{cookiecutter.project_name}}"
version = "0.1.0-alpha"

[tool.poetry.dependencies]
python = "^3.10"

PyJWT = { extras = ["crypto"], version = "^2.5.0" }
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.41" }
alembic = "^1.8.1"
asyncpg = "^0.26.0"
fastapi = "^0.85.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic = { extras = ["email", "dotenv"], version = "^1.10.2" }
python-multipart = ">=0.0.5,<0.0.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.7.1"
black = "^22.10.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
httpx = "^0.23.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
sqlalchemy2-stubs = "^0.0.2-alpha.28"
uvicorn = "^0.18.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["app/tests"]

[tool.isort]
profile = "black"
